Add a new test feature to select the meal previous the recommendation beers

--- a/app/src/main/res/layout/activity_beers_results.xml
+++ b/app/src/main/res/layout/activity_beers_results.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +8,7 @@
     android:paddingBottom="8dp"
     android:paddingEnd="8dp"
     android:paddingStart="8dp"
-    tools:context=".ui.MealsByBeersActivity">
+    tools:context=".ui.BeersResultsActivity">
 
     <include
         android:id="@+id/main_activity_spinner"
@@ -18,16 +19,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/main_activity_search_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/activity_main_search_button"/>
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_beers"
         android:layout_width="match_parent"
@@ -36,7 +27,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_activity_search_button" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
 
