--- a/app/src/main/res/layout/activity_beers_results.xml
+++ b/app/src/main/res/layout/activity_beers_results.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="8dp"
     android:paddingEnd="8dp"
     android:paddingStart="8dp"
-    tools:context=".ui.BeersResultsActivity">
+    tools:context=".ui.BeersResultActivity">
 
     <include
         android:id="@+id/main_activity_spinner"
