--- a/app/src/main/res/layout/item_list_beer.xml
+++ b/app/src/main/res/layout/item_list_beer.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="8dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/item_list_card_view"
         android:elevation="20dp"
         app:cardCornerRadius="5dp"
@@ -14,13 +14,13 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp">
 
-            <android.support.v7.widget.AppCompatTextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/item_list_beer_abv"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
@@ -33,7 +33,7 @@
                 app:layout_constraintTop_toTopOf="@id/item_list_beer_image"
                 tools:text="4.5" />
 
-            <android.support.v7.widget.AppCompatTextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/item_list_beer_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
                 app:layout_constraintTop_toTopOf="@id/item_list_beer_abv"
                 tools:text="Beer title" />
 
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/item_list_beer_image"
                 android:layout_width="48dp"
                 android:layout_height="100dp"
@@ -56,7 +56,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@drawable/ic_close_black" />
 
-            <android.support.v7.widget.AppCompatTextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/item_list_beer_tagline"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -68,8 +68,8 @@
                 app:layout_constraintStart_toEndOf="@+id/item_list_beer_abv"
                 app:layout_constraintTop_toBottomOf="@id/item_list_beer_name"/>
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
