Add a new package named Home with the base project to do more feature with the package by feature schema

--- a/app/src/main/res/layout/activity_beers_results.xml
+++ b/app/src/main/res/layout/activity_beers_results.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="8dp"
     android:paddingEnd="8dp"
     android:paddingStart="8dp"
-    tools:context=".ui.BeersResultActivity">
+    tools:context=".home.ui.HomeActivity">
 
     <include
         android:id="@+id/main_activity_spinner"
