--- a/app/src/main/res/layout/activity_beers_results.xml
+++ b/app/src/main/res/layout/activity_beers_results.xml
@@ -6,9 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="8dp"
-    android:paddingEnd="8dp"
-    android:paddingStart="8dp"
+    android:padding="8dp"
     tools:context=".home.ui.HomeActivity">
 
     <include
